--- a/styles.css
+++ b/styles.css
@@ -4,3 +4,58 @@
   box-sizing: border-box;
   font-family: "Poppins", sans-serif;
 }
+
+body {
+  background: linear-gradient(to right, rgb(213, 223, 70), rgb(84, 184, 51));
+}
+main {
+  background: rgb(84, 184, 51);
+  border: 10px solid #fff;
+  margin: 200px 500px;
+  border-radius: 20px;
+  padding: 50px 20px;
+}
+
+h2 {
+  color: #fff;
+  display: flex;
+  align-items: center;
+  gap: 20px;
+  justify-content: space-between;
+  margin: 10px;
+}
+
+span {
+  /* background-color: rgb(255, 255, 255, 0.25); */
+  color: #000;
+  padding: 3px;
+}
+
+.btnDivs {
+  display: flex;
+  align-items: center;
+  gap: 10px;
+  margin-top: 20px;
+  justify-content: center;
+}
+button {
+  border-radius: 20px;
+  padding: 5px 30px;
+  cursor: pointer;
+  font-size: 2rem;
+  border: 1px solid white;
+  outline: none;
+  background-color: rgba(255, 255, 255, 0.75);
+}
+button:hover {
+  background-color: rgba(255, 255, 255, 0.9);
+}
+button:focus {
+  color: red;
+}
+
+p {
+  margin-top: 20px;
+  text-align: center;
+  font-style: italic;
+}
